@@ -1,3 +1,8 @@
+2024-08-06  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix converted inittab dependencies. Fixes erroneous rc.M stops when
+	switching between runlevels.
+
 2024-07-30  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Release 1.2
